Update test file

--- a/.github/workflows/Test_opts.yml
+++ b/.github/workflows/Test_opts.yml
@@ -1,4 +1,4 @@
-name: .NET
+name: .NET TestSuite sample test
 
 on:
   push:
@@ -9,17 +9,29 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+    - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.x
-    - name: Restore dependencies
-      run: dotnet restore
+        dotnet-version: 4.0.x
+        
+    - name: Setup MSBuild Path
+    #- uses: saikrishna2893/OPTS_Pipeline/Setup-MSBuild@v2
+    
+    - name: Setup NuGet
+    #- uses: NuGet/setup-nuget@v1.0.2
+    
+    - name: Setup Release directory
+      run: Compile_testsuite.bat
+    
+    - name: Build and Publish the App
+      ##run:  msbuild
+      
     - name: Build
-      run: dotnet build --no-restore
+      #run: dotnet build --no-restore
+      
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      #run: dotnet test --no-build --verbosity normal
