--- a/.github/workflows/Test_opts.yml
+++ b/.github/workflows/Test_opts.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 4.0.x
+        dotnet-version: 4.7.2
         
     - name: Setup MSBuild Path
       uses:  microsoft/setup-msbuild@v1.1
