--- a/.github/workflows/Test_opts.yml
+++ b/.github/workflows/Test_opts.yml
@@ -26,7 +26,9 @@ jobs:
       run: nuget restore Excel_TextAlignment.sln
       
     - name: Setup Release directory
-      run: Compile_testsuite.bat
+      shell: cmd
+      run: ".\\Compile_testsuite.bat"
+      #run: Compile_testsuite.bat
     
     - name: Build the solution
       run:  msbuild Excel_TextAlignment.sln /t:Rebuild /p:Configuration=Release /p:Platform="Any CPU" 
