--- a/.github/workflows/Test_opts.yml
+++ b/.github/workflows/Test_opts.yml
@@ -23,7 +23,7 @@ jobs:
       uses: NuGet/setup-nuget@v1.0.5
     
     - name: Restore NuGet packages
-      run: nuget restore Excel_TextAlignment.sln
+      run: nuget restore ".\\Word_JenkaLoad\\Word_JenkaLoad.sln" #Excel_TextAlignment.sln
       
     - name: Setup Release directory
       shell: cmd
@@ -31,7 +31,7 @@ jobs:
       #run: Compile_testsuite.bat
     
     - name: Build the solution
-      run:  msbuild Excel_TextAlignment.sln /t:Rebuild /p:Configuration=Release /p:Platform="Any CPU" 
+      run:  msbuild ".\\Word_JenkaLoad\\Word_JenkaLoad.sln" /t:Rebuild /p:Configuration=Release /p:Platform="Any CPU" 
       
     #- name: Build
       #run: dotnet build --no-restore
