--- a/.github/workflows/Test_opts.yml
+++ b/.github/workflows/Test_opts.yml
@@ -15,6 +15,13 @@ jobs:
     - uses: actions/checkout@v2
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
+    
+    # CLI for Microsoft 365 login action
+    - name: Login to tenant
+      uses: pnp/action-cli-login@v2.0.0
+      with:
+        ADMIN_USERNAME:  ${{ secrets.ADMIN_USERNAME }}
+        ADMIN_PASSWORD:  ${{ secrets.ADMIN_PASSWORD }}
         
     - name: Setup MSBuild Path
       uses:  microsoft/setup-msbuild@v1.1
