--- a/.github/workflows/Test_opts.yml
+++ b/.github/workflows/Test_opts.yml
@@ -17,8 +17,8 @@ jobs:
       uses: actions/setup-dotnet@v1
     
     # CLI for Microsoft 365 login action
-    - name: Login to tenant
-      uses: pnp/action-cli-login@v2.0.0
+    #- name: Login to tenant
+      #uses: pnp/action-cli-login@v2.0.0
       #with:
         #ADMIN_USERNAME:  ${{ secrets.ADMIN_USERNAME }}
         #ADMIN_PASSWORD:  ${{ secrets.ADMIN_PASSWORD }}
@@ -37,8 +37,8 @@ jobs:
       run: ".\\Compile_testsuite.bat"
       #run: Compile_testsuite.bat
     
-    - name: Build the solution
-      run:  msbuild ".\\Word_JenkaLoad\\Word_JenkaLoad.sln" /t:Rebuild /p:Configuration=Release /p:Platform="Any CPU" 
+    #- name: Build the solution
+      #run:  msbuild ".\\Word_JenkaLoad\\Word_JenkaLoad.sln" /t:Rebuild /p:Configuration=Release /p:Platform="Any CPU" 
       
     #- name: Build
       #run: dotnet build --no-restore
