--- a/Word_JenkaLoad/Word_JenkaLoad/packages.config
+++ b/Word_JenkaLoad/Word_JenkaLoad/packages.config
@@ -2,4 +2,9 @@
 <packages>
   <package id="CommandLineParser" version="2.8.0" targetFramework="net472" />
   <package id="ILMerge.MSBuild.Tasks" version="1.0.0.3" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.PowerPoint" version="15.0.4797.1003" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Outlook" version="15.0.4797.1003" targetFramework="net472" />
+  <package id="Microsoft.Office.Core" version="15.0.4797.1003" targetFramework="net472" />
 </packages>
