--- a/Word_JenkaLoad/Word_JenkaLoad/packages.config
+++ b/Word_JenkaLoad/Word_JenkaLoad/packages.config
@@ -6,5 +6,5 @@
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Outlook" version="15.0.4797.1003" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.PowerPoint" version="15.0.4420.1017" targetFramework="net472" />
-  <package id="Microsoft.Office.Core" version="15.0.0" targetFramework="net472" />
+  <package id="MicrosoftOfficeCore" version="15.0.0" targetFramework="net472" />
 </packages>
