--- a/.github/workflows/SelfhostedRunner_test.yml
+++ b/.github/workflows/SelfhostedRunner_test.yml
@@ -31,12 +31,16 @@ jobs:
       run: nuget restore ".\\Word_JenkaLoad\\Word_JenkaLoad.sln" #Excel_TextAlignment.sln
       #run: nuget install .\\Word_JenkaLoad\\Word_JenkaLoad\\packages.config -o .\\Word_JenkaLoad\\packages\
       
-    - name: Setup Release directory
-      shell: sh
-      run: ".\\Compile_testsuite.bat"
+    #- name: Setup Release directory
+      #shell: sh
+      #run: ".\\Compile_testsuite.bat"
       #run: Compile_testsuite.bat
     
     - name: Build the solution
       shell: sh
-      run:  msbuild ".\\Word_JenkaLoad\\Word_JenkaLoad.sln" /t:Rebuild /p:Configuration=Release /p:Platform="Any CPU" 
+      working-directory: ".\\Word_JenkaLoad"
+      run:  msbuild ".\\Word_JenkaLoad\\Word_JenkaLoad.sln" /t:Rebuild /p:Configuration=Release /p:Platform="Any CPU"
+      # Add additional options to the MSBuild command line here (like platform or verbosity level).
+      # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
+      #run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ".\\Word_HelloWorld.sln"
 
