--- a/.github/workflows/SelfhostedRunner_test.yml
+++ b/.github/workflows/SelfhostedRunner_test.yml
@@ -44,8 +44,11 @@ jobs:
       #shell: sh
       #run: "VsMSBuildCmd.exe"
     
+    - name: Setup MSBuild Path
+      uses:  microsoft/setup-msbuild@v1.0.2
+    
     - name: Build the solution
-      #shell: sh
+      shell: sh
       working-directory: ".\\Word_JenkaLoad"
       run:  msbuild ".\\Word_JenkaLoad\\Word_JenkaLoad.sln" /t:Rebuild /p:Configuration=Release /p:Platform="Any CPU"
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
