--- a/.github/workflows/SelfhostedRunner_test.yml
+++ b/.github/workflows/SelfhostedRunner_test.yml
@@ -16,9 +16,9 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
     
-    - name: Run information
-      #shell: sh
-      run: echo "Hello from Self hosted runner on Desktop-JUL!"
+    #- name: Run information
+      #shell: cmd
+      #run: echo "Hello from Self hosted runner on Desktop-JUL!"
       
     - name: Setup MSBuild Path
       uses:  microsoft/setup-msbuild@v1.0.2
