--- a/.github/workflows/SelfhostedRunner_test.yml
+++ b/.github/workflows/SelfhostedRunner_test.yml
@@ -50,8 +50,8 @@ jobs:
     - name: Build the solution
       shell: sh
       working-directory: ".\\Word_JenkaLoad" 
-      run:  msbuild ".\\Word_JenkaLoad\\Word_JenkaLoad.sln" /t:Rebuild /p:Configuration=Release /p:Platform="Any CPU"
+      #run:  msbuild ".\\Word_JenkaLoad\\Word_JenkaLoad.sln" /t:Rebuild /p:Configuration=Release /p:Platform="Any CPU"
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      #run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ".\\Word_HelloWorld.sln"
+      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ".\\Word_JenkaLoad.sln"
 
