--- a/.github/workflows/SelfhostedRunner_test.yml
+++ b/.github/workflows/SelfhostedRunner_test.yml
@@ -53,5 +53,6 @@ jobs:
       #run:  msbuild ".\\Word_JenkaLoad\\Word_JenkaLoad.sln" /t:Rebuild /p:Configuration=Release /p:Platform="Any CPU"
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ".\\Word_JenkaLoad.sln"
+      #run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ".\\Word_JenkaLoad.sln"
+      run: MSBuild .\\Word_JenkaLoad.sln /p:Configuration=Release /p:Platform="Any CPU"
 
