--- a/.github/workflows/SelfhostedRunner_test.yml
+++ b/.github/workflows/SelfhostedRunner_test.yml
@@ -59,5 +59,5 @@ jobs:
       
     - name: Build the solution
       shell: sh
-      run: MSBuild.exe .\\Word_JenkaLoad\\Word_JenkaLoad.sln #/p:Configuration=Release /p:Platform="Any CPU"
+      run: MSBuild.exe .\\Word_JenkaLoad\\Word_JenkaLoad.sln p:Configuration=Release /p:Platform="Any CPU"
 
