--- a/.github/workflows/SelfhostedRunner_test.yml
+++ b/.github/workflows/SelfhostedRunner_test.yml
@@ -31,21 +31,9 @@ jobs:
       run: nuget restore ".\\Word_JenkaLoad\\Word_JenkaLoad.sln"
       #run: nuget install .\\Word_JenkaLoad\\Word_JenkaLoad\\packages.config -o .\\Word_JenkaLoad\\packages\
       
-    #- name: Setup Release directory
-      #shell: sh
-      #run: ".\\Compile_testsuite.bat"
-      #run: Compile_testsuite.bat
-      
-    #- name: Setup MSBuild path
-      #shell: sh
-      #run: "set PATH=%PATH%;C:\Program Files (x86)\ Microsoft Visual Studio\ 2019\ Community\ Common7\ Tools;"
     
-    #- name: Setup MSBuild path
-      #shell: sh
-      #run: "VsMSBuildCmd.exe"
-    
-    - name: Setup MSBuild Path
-      uses:  microsoft/setup-msbuild@v1.0.2
+    #- name: Setup MSBuild Path
+      #uses:  microsoft/setup-msbuild@v1.0.2
     
     - name: Setting Path
       shell: sh
@@ -53,11 +41,17 @@ jobs:
       run: pwd
       
       #run:  msbuild ".\\Word_JenkaLoad\\Word_JenkaLoad.sln" /t:Rebuild /p:Configuration=Release /p:Platform="Any CPU"
-      # Add additional options to the MSBuild command line here (like platform or verbosity level).
-      # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       #run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ".\\Word_JenkaLoad.sln"
       
+      # Add additional options to the MSBuild command line here (like platform or verbosity level).
+      # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
+
     - name: Build the solution
       shell: sh
       run: MSBuild.exe .\\Word_JenkaLoad\\Word_JenkaLoad.sln //p:Configuration=Release //p:Platform="Any CPU"
+      
+    - name: Setup Release directory
+      shell: sh
+      run: ".\\Compile_testsuite.bat"
+      
 
