--- a/.github/workflows/SelfhostedRunner_test.yml
+++ b/.github/workflows/SelfhostedRunner_test.yml
@@ -45,7 +45,7 @@ jobs:
       
     - name: Setting Path
       shell: sh
-      working-directory: ".\\Word_JenkaLoad"
+      #working-directory: ".\\Word_JenkaLoad"
       run: pwd
       
       #run:  msbuild ".\\Word_JenkaLoad\\Word_JenkaLoad.sln" /t:Rebuild /p:Configuration=Release /p:Platform="Any CPU"
