--- a/.github/workflows/Packaging_CD.yml
+++ b/.github/workflows/Packaging_CD.yml
@@ -1,41 +1,33 @@
-name: Create and publish a Docker image
-
+name: Publishing Package
 on:
   push:
-    branches: ['release']
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+    branches: [main]
 
 jobs:
-  build-and-push-image:
-    runs-on: windows
-    permissions:
-      contents: read
-      packages: write
-
+  zip-files:
+    runs-on: self-hosted
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      - uses: actions/checkout@v2
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+    
+      - name: Setup MSBuild Path
+        uses:  microsoft/setup-msbuild@v1.0.2
+    
+      - name: Setup NuGet
+        uses: NuGet/setup-nuget@v1.0.5
+        
+      - name: Setup Release directory
+        shell: sh
+        run: .\\Compile_testsuite.bat
+        
+      - uses: papeloto/action-zip@v1
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+          files: .\\Release_1.00
+          recursive: true
+          dest: Release_1.zip
+          
+      - uses: actions/upload-artifact@v1
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          name: my-artifact
+          path: ${{ github.workspace }}/Release_1.zip
