--- a/.github/workflows/SelfhostedRunner_test.yml
+++ b/.github/workflows/SelfhostedRunner_test.yml
@@ -1,10 +1,18 @@
 name: SelfhostedRunner Test
-
+#Defining the "On" using manual trigger
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'     
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags' 
+  #push:
+    #branches: [ main ]
+  #pull_request:
+    #branches: [ main ]
 
 jobs:
   build:
