--- a/.github/workflows/Packaging_CD.yml
+++ b/.github/workflows/Packaging_CD.yml
@@ -18,7 +18,7 @@ jobs:
         uses: NuGet/setup-nuget@v1.0.5
         
       - name: Setup Release directory
-        shell: sh
+        #shell: cmd
         run: .\\Compile_testsuite.bat
         
       - uses: papeloto/action-zip@v1
