--- a/.github/workflows/Packaging_CD.yml
+++ b/.github/workflows/Packaging_CD.yml
@@ -34,7 +34,14 @@ jobs:
           
       #TOKEN_REPO
       - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@master
+        #uses: anothrNick/github-tag-action@master
+        #env:
+          #GITHUB_TOKEN: ${{ secrets.TOKEN_REPO }}
+          #REPO_OWNER: Saikrishna
+        with:
+          node-version: 12
+          registry-url: https://npm.pkg.github.com/
+      - run: npm ci
+      - run: npm publish
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN_REPO }}
-          REPO_OWNER: Saikrishna
+          NODE_AUTH_TOKEN: ${{secrets.TOKEN_REPO}}
