--- a/.github/workflows/SelfhostedRunner_test.yml
+++ b/.github/workflows/SelfhostedRunner_test.yml
@@ -26,14 +26,23 @@ jobs:
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1.0.5
     
-    - name: Setup Release directory
-      shell: sh
-      run: .\\Compile_testsuite.bat
+    #- name: Setup Release directory
+      #shell: sh
+      #run: .\\Compile_testsuite.bat
       
-    - name: Run Boss script
-      working-directory: ".\\Release_1.00\\run"
+    - name: Setup version
+      id: getversion
+      run: echo "::set-output name=version::$(cat Version.txt)"
+      
+    - name: Setting Path
       shell: sh
-      run: .\\MSOffice_Test_Automation.bat
+      working-directory: ".\\Release_${{ steps.getversion.outputs.version }}\\run"
+      run: pwd
+      
+    #- name: Run Boss script
+      #working-directory: ".\\Release_${{ steps.getversion.outputs.version }}\\run"
+      #shell: sh
+      #run: .\\MSOffice_Test_Automation.bat
       
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
