--- a/.github/workflows/SelfhostedRunner_test.yml
+++ b/.github/workflows/SelfhostedRunner_test.yml
@@ -33,17 +33,24 @@ jobs:
     - name: Setup version
       id: getversion
       shell: sh
-      run: echo "::set-output name=version::$(cat .\\Version.txt)"
+      run: echo "::set-output name=version::Release_$(cat .\\Version.txt)"
       
-    #- name: Setting Path
-      #shell: sh
+    - name: Setting Path
+      shell: sh
+      env:
+        directory: "Release_${{ steps.getversion.outputs.version }}"
       #working-directory: ".\\Release_*\\run"
-      #run: echo "${{ steps.getversion.outputs.version }}"
+      run: echo ${directory} #"${{ steps.getversion.outputs.version }}"
       
     - name: Run Boss script
-      working-directory: ".\\Release_${{ steps.getversion.outputs.version }}\\run"
+      working-directory: "./Release_**/run"
       shell: sh
       run: pwd #.\\MSOffice_Test_Automation.bat
+      
+    #- name: Run Boss script
+      #working-directory: ".\\Release_1.00\\run"
+      #shell: sh
+      #run: .\\MSOffice_Test_Automation.bat
       
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
