--- a/.github/workflows/SelfhostedRunner_test.yml
+++ b/.github/workflows/SelfhostedRunner_test.yml
@@ -26,9 +26,9 @@ jobs:
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1.0.5
     
-    #- name: Setup Release directory
-      #shell: sh
-      #run: .\\Compile_testsuite.bat
+    - name: Setup Release directory
+      shell: sh
+      run: .\\Compile_testsuite.bat
       
     - name: Setup version
       id: getversion
@@ -39,22 +39,13 @@ jobs:
       shell: sh
       env:
         directory: "${{ steps.getversion.outputs.version }}"
-      #working-directory: ".\\Release_*\\run"
-      run: echo ${directory} #"${{ steps.getversion.outputs.version }}"
+      run: echo ${directory} 
       
-    - name: Run Path
-      working-directory: ".\\Release_1.00\\run"
+    - name: Run Boss script
+      working-directory: ".\\${{ steps.getversion.outputs.version }}\\run"
       shell: sh
-      run: pwd
+      run: .\\MSOffice_Test_Automation.bat
       
-    #- name: Run Boss script
-      #working-directory: ".\\${{ steps.getversion.outputs.version }}\\run"
-      #shell: sh
-      #run: .\\MSOffice_Test_Automation.bat
-      
-      # Add additional options to the MSBuild command line here (like platform or verbosity level).
-      # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-
     #- name: Build the solution
       #shell: sh
       #run: MSBuild.exe .\\Word_JenkaLoad\\Word_JenkaLoad.sln //p:Configuration=Release //p:Platform="Any CPU"
