--- a/.github/workflows/Packaging_CD.yml
+++ b/.github/workflows/Packaging_CD.yml
@@ -28,16 +28,21 @@ jobs:
         #shell: cmd
         run: .\\Compile_testsuite.bat
         
+      - name: Setup version
+        id: getversion
+        #shell: sh
+        run: echo "::set-output name=version::Release_$(cat .\\Version.txt)"
+      
       - uses: papeloto/action-zip@v1
         with:
-          files: .\\Release_1.00
+          files: .\\${{ steps.getversion.outputs.version }}
           recursive: true
-          dest: Release_1.zip
+          dest: ${{ steps.getversion.outputs.version }}.zip
           
       - uses: actions/upload-artifact@v1
         with:
           name: Release_package
-          path: ${{ github.workspace }}/Release_1.zip
+          path: ${{ github.workspace }}/${{ steps.getversion.outputs.version }}.zip
           
       #TOKEN_REPO
       - name: Bump version and push tag to releases
@@ -46,5 +51,16 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.TOKEN_REPO }}
           REPO_OWNER: Saikrishna
         with:
-          tag_name: v${{github.run_number}}
+          #tag_name: v${{github.run_number}}
+          tag_name: ${{steps.create_release.outputs.string}}
           release_name: Release Version${{github.run_number}}
+         
+      - name: upload windows artifact 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_REPO }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ github.workspace }}/${{ steps.getversion.outputs.version }}.zip
+          asset_name: ${{ steps.getversion.outputs.version }}.zip
+          asset_content_type: application/zip
