--- a/.github/workflows/Packaging_CD.yml
+++ b/.github/workflows/Packaging_CD.yml
@@ -3,12 +3,8 @@ name: Publishing Package
 on:
   workflow_dispatch:
     inputs:
-      logLevel:
-        description: 'Log level'     
-        required: true
-        default: 'warning'
       tags:
-        description: 'Test scenario tags' 
+        description: 'Publishing package' 
 
 jobs:
   zip-files:
@@ -52,10 +48,8 @@ jobs:
         id: create_release
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_REPO }}
-          REPO_OWNER: Saikrishna
         with:
           tag_name: v${{github.run_number}}
-          #tag_name: ${{steps.create_release.outputs.string}}
           release_name: Release Version${{github.run_number}}
          
       - name: upload windows artifact 
