--- a/.github/workflows/Packaging_CD.yml
+++ b/.github/workflows/Packaging_CD.yml
@@ -1,7 +1,14 @@
-name: Publishing Package
+name: Publishing Release Package
 
 on:
   workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Packages Release files'     
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Tags artifact files to Releases' 
 
 jobs:
   zip-files:
@@ -18,12 +25,14 @@ jobs:
         uses: NuGet/setup-nuget@v1.0.5
         
       - name: Setup Release directory
+        #shell: cmd
         run: .\\Compile_testsuite.bat
         
       - name: Setup version
         id: getversion
+        #shell: sh
         run: echo "::set-output name=version::Release_$(cat .\\Version.txt)"
-      
+        
       - name: Easy Zip Files
         uses: vimtor/action-zip@v1
       #- uses: papeloto/action-zip@v1
@@ -37,20 +46,19 @@ jobs:
           name: Release_package
           path: ${{ github.workspace }}/${{ steps.getversion.outputs.version }}.zip
           
-      #TOKEN_REPO to be created (Personal Access Token)
-      - name: Bump version and push tag to releases
-        uses: actions/create-release@v1
+      - name: Create release and upload-artifact to release
         id: create_release
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN_REPO }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN_REPO }} #To provide token for the repository to access.
+          REPO_OWNER: Saikrishna
         with:
           tag_name: v${{github.run_number}}
           release_name: Release Version${{github.run_number}}
          
-      - name: upload windows artifact 
+      - name: upload artifact to Releases 
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN_REPO }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN_REPO }} #To provide token for the repository to access.
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ github.workspace }}/${{ steps.getversion.outputs.version }}.zip
